# generator-python-kamino

./: CHANGELOG.md  LICENSE  README.md  build.xml  cliff.toml  package-lock.json  package.json
.github/workflows/: release.yml  test.yml
__tests__/: app.js
generators/app/: index.js
generators/app/templates/: Pipfile  main.py  setup.cfg
