[metadata]
name = <%= name %>
version = 0.1.0-alpha
author = Nikolaos Georgiou
author_email = Nikolaos.Georgiou@gmail.com
description = <%= description %>
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ngeor/kamino
project_urls =
    Bug Tracker = https://github.com/ngeor/kamino/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
#install_requires =
#    requests ==2.27.1

#[options.package_data]
#* =
#    *.xml

[options.entry_points]
console_scripts =
    instarepo = <%= name %>.main:main
